--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <!-- Add your site or application content here -->
 		<header>
 			<div class='logo bounce'>
-				<img src="/img/automise-mark.png" width="250" />
+				<img src="img/automise-mark.png" width="250" />
 			</div>
 			<div class='text'>
 				<p>coming soon</p>
