--- a/index.html
+++ b/index.html
@@ -3,47 +3,138 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>automise</title>
+        <title>Automise</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <!-- Place favicon.ico in the root directory -->
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/custom.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-
-        <!-- Add your site or application content here -->
-		<header>
-			<div class='logo bounce'>
-				<img src="/img/automise-mark.png" width="250" />
-			</div>
-			<div class='text'>
-				<p>coming soon</p>
-			</div>
-		</header>
-
+        <header class='padding'>
+            <div class="container">
+                <div class="logo"></div>
+                <p class='tagline'>We’re passionate about building things and helping people get the most out of web technology. We can help you optimise your productivity by automating your paper-based workflows.</p>
+                <hr />
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col col-sm-4">
+                        <div class="icon">
+                            <span class='fa fa-credit-card'></span>
+                        </div>
+                        <p>Payment Technology Specialists</p>
+                    </div>
+                    <div class="col col-sm-4">
+                        <div class="icon">
+                            <span class='fa fa-sitemap'></span>
+                        </div>
+                        <p>Workflow Optimisation &amp; Automation</p>
+                    </div>
+                    <div class="col col-sm-4">
+                        <div class="icon">
+                            <span class='fa fa-laptop'></span>
+                        </div>
+                        <p>Mobile &amp; Web Applications</p>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <section class='padding'>
+            <div class="container">
+                <h3>Our Products</h3>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="image-wrapper">
+                            <img src="./img/payzip.png"></img>
+                        </div>
+                        <p>Built specifically for clubs, societies and not-for-profits, PayZip will revolutionise your payment administration.</p>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="image-wrapper">
+                            <img src="./img/bidstar.png"></img>
+                        </div>
+                        <p>A powerful fundraising platform for the social generation. Bidstar helps charities raise money quickly and easily.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container">
+                <hr/>
+            </div>
+        </section>
+        <section class='padding'>
+            <div class="container">
+                <h3>Our Work</h3>
+                <div class="row">
+                    
+                    <div class="col-md-4">
+                        <div class="image-wrapper">
+                            <img src="./img/payzip.png"></img>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="image-wrapper">
+                            <img src="./img/bidstar.png"></img>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="image-wrapper">
+                            <img src="./img/bidstar.png"></img>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="image-wrapper">
+                            <img src="./img/payzip.png"></img>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="image-wrapper">
+                            <img src="./img/bidstar.png"></img>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="image-wrapper">
+                            <img src="./img/bidstar.png"></img>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <footer class='padding'>
+            <div class="container">
+                <div class='col-md-12'>
+                    <ul>
+                        <li>
+                            <a href="http://twitter.com/automise" target="_BLANK"><span class='fa fa-twitter'></span></a>
+                        </li>
+                        <li>
+                            <a href="http://facebook.com/automise" target="_BLANK"><span class='fa fa-facebook'></span></a>
+                        </li>
+                        <li>
+                            <a href="http://linkedin.com/automise" target="_BLANK"><span class='fa fa-linkedin'></span></a>
+                        </li>
+                    </ul>
+                    <p>&copy; 2015 PayZip Ltd</p>
+                    <p><a href="hello@automise.co.uk">hello@automise.co.uk</a></p>
+                    <p>167 Broadway<br />Cardiff<br />CF24 1QH<br />Registered in England &amp; Wales No. 07334100</p>
+                </div>
+            </div>
+        </footer>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
-
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='https://www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-        </script>
     </body>
 </html>
