--- a/index.html
+++ b/index.html
@@ -153,6 +153,9 @@
     							</a>
             				</div>
             			</div>
+            		    <div class="col-md-6">
+            		        <img src="img/slack.png" alt="Slack" style='width: 100%; display: block; margin: 0 auto;'>
+            		    </div>
                     </div>
                 </div>
             </section>
@@ -204,7 +207,7 @@
                             <div class="col-md-6">
                                 <span class="text-logo">Automise</span>
                                 <p class="footer-hero">
-                                    We've created the product that will help your hotel get better marketing results.
+                                    We do some awesome stuff that you'll love that will make us both money
                                 </p>
                                 <p class="footer-cta">
                                     What are you waiting for? 
