Changed hero image and logo

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                                     <div class="col-md-12">
                                         <div class="navbar-header">
                                             <a href="/" class="navbar-brand">
-                                                <span class="text-logo">Automise</span>
+                                                <span class="image-logo"><img src="img/automise-logo.png" alt="automise" /></span>
                                             </a>
                                             <button data-target=".navbar-collapse" data-toggle="collapse" class="navbar-toggle" type="button">
                                                 <span class="sr-only">Toggle navigation</span>
