--- a/index.html
+++ b/index.html
@@ -136,10 +136,10 @@
                         <div class="col-xs-12" />
                     </div>
                 </div>
-                <div class="row spacing">
+                <div class="feature row spacing">
                     <div class="container">
                         <div class="col-md-6 col-md-push-6">
-                            <img src="img/slack.png" alt="Slack" style='width: 100%; display: block; margin: 0 auto;'>
+                            <img src="img/slack.png" alt="Slack" style='width: 75%; display: block; margin: 0 auto;'>
                         </div>
                         <div class="col-md-6 col-md-pull-6">
                             <h3>Slack Integration</h3>
