--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-xs-12">
-                            <h2>What we do</h2>
-                            <p class="large nomargin">Some words</p>
+                            <h2>Our areas of expertise</h2>
+                            <p class="large nomargin">We can build almost anything, but here's a few things we're really good at:</p>
                         </div>
                     </div>
                 </div>
@@ -146,7 +146,10 @@
                         </div>
                         <div class="col-md-6 col-md-pull-6">
                             <h3>Slack Integration</h3>
-                            <p>Make your business come alive by drawing together the systems you already use and see all of your key information in one place.</p><p>Be notified of every sale, customer support request or tweet about your company - instantly, wherever you are!</p>
+                            <p>Maybe you've already got the tools you need to work with.  Wouldn't it be good if they could all update you in one place?  We can integrate Slack for you so all your humans and systems can talk together.
+
+                            <!-- <br/>Make your business come alive by drawing together the systems you already use and see all of your key information in one place. -->
+                            </p><p>Be notified of every sale, customer support request or tweet about your company instantly, wherever you are!</p>
                         </div>
                     </div>
                 </div>
@@ -164,8 +167,9 @@
                             <img src="img/slack.png" alt="Slack" style='width: 100%; display: block; margin: 0 auto;'>
                         </div>
                         <div class="col-md-6">
-                            <h3>Slack Integration</h3>
-                            <p>Make your business come alive by drawing together the systems you already use and see all of your key information in one place.</p><p>Be notified of every sale, customer support request or tweet about your company - instantly, wherever you are!</p>
+                            <h3>Secure Mobile Payments</h3>
+                            <p>Make it easy for your customers to pay you.  Take secure payments from your customers at their convenience, on their choice of device.</p>
+                            <p>We can integrate your systems with all the major payment companies, including Stripe, Braintree and PayPal.</p>
                         </div>
                     </div>
                 </div>
@@ -183,7 +187,7 @@
                             <img src="img/slack.png" alt="Slack" style='width: 100%; display: block; margin: 0 auto;'>
                         </div>
                         <div class="col-md-6 col-md-pull-6">
-                            <h3>Slack Integration</h3>
+                            <h3>Social Digital Platforms</h3>
                             <p>Make your business come alive by drawing together the systems you already use and see all of your key information in one place.</p><p>Be notified of every sale, customer support request or tweet about your company - instantly, wherever you are!</p>
                         </div>
                     </div>
