--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                         <div class="row">
                             <!-- Section Header Title -->
                             <div class="col-xs-12">
-                                <h2>Some title</h2>
-                                <p class="large">Some more words</p>
+                                <h2>Work With Us</h2>
+                                <!-- <p class="large"></p> -->
                             </div>
                         </div>
                         <div class="row">
@@ -168,8 +168,8 @@
                         </div>
                         <div class="col-md-6">
                             <h3>Secure Mobile Payments</h3>
-                            <p>Make it easy for your customers to pay you.  Take secure payments from your customers at their convenience, on their choice of device.</p>
-                            <p>We can integrate your systems with all the major payment companies, including Stripe, Braintree and PayPal.</p>
+                            <p>We built PayZip to simplify member payments for clubs, societies and not-for-profits.  We're currently helping to revolutionise payments administration for a handful of leading sports organisations.</p>
+                            <p>We can also integrate online payment solutions into your systems, such as Stripe, Braintree and PayPal.</p>
                         </div>
                     </div>
                 </div>
@@ -188,7 +188,8 @@
                         </div>
                         <div class="col-md-6 col-md-pull-6">
                             <h3>Social Digital Platforms</h3>
-                            <p>Make your business come alive by drawing together the systems you already use and see all of your key information in one place.</p><p>Be notified of every sale, customer support request or tweet about your company - instantly, wherever you are!</p>
+                            <p>We built Bidstar, a revolutionary auction platform for ambassadors and charities, helping them raise money for the causes that mean the most to them through deep integration of social media.</p>
+                            <p>We can help put your platform in front of a global audience too.</p>
                         </div>
                     </div>
                 </div>
