--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 <div class="row spacing">
                     <div class="container">
                         <div class="col-md-6">
-                            <img src="img/slack.png" alt="Slack" style='width: 75%; display: block; margin: 0 auto;'>
+                            <img src="img/payzip-image.png" alt="Slack" style='width: 75%; display: block; margin: 0 auto;'>
                         </div>
                         <div class="col-md-6">
                             <h3>Slack Integration</h3>
