Make it live live

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                                 Learn More
                                             </a>
                                             <a href="" class="btn btn-lg btn-color btn-oval">	
-                                                Get in touch
+                                                Say Hello
                                             </a>
                                         </div>
                                     </div>
@@ -164,12 +164,16 @@
                 <div class="row spacing">
                     <div class="container">
                         <div class="col-md-6">
-                            <img src="img/payzip-image.png" alt="Slack" style='width: 75%; display: block; margin: 0 auto;'>
+                            <a href="http://payzip.co.uk" alt="PayZip" target="_BLANK"><img src="img/payzip-image.png" alt="PayZip" style='width: 75%; display: block; margin: 0 auto;'></a>
                         </div>
                         <div class="col-md-6">
                             <h3>Secure Mobile Payments</h3>
                             <p>We built PayZip to simplify member payments for clubs, societies and not-for-profits.  We're currently helping to revolutionise payments administration for a handful of leading sports organisations.</p>
                             <p>We can also integrate online payment solutions into your systems, such as Stripe, Braintree and PayPal.</p>
+
+                            <div class='btn-box'>
+                                <a href="http://payzip.co.uk/" target="_BLANK" class='btn btn-ghost btn-lg btn-ghost__red'>PayZip Website</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -184,12 +188,18 @@
                 <div class="row spacing">
                     <div class="container">
                         <div class="col-md-6 col-md-push-6">
-                            <img src="img/slack.png" alt="Slack" style='width: 75%; display: block; margin: 0 auto;'>
+                            <a href="http://bidstar.co.uk" alt="Bidstar" target="_BLANK">
+                                <img src="img/bidstar-image.png" alt="Bidstar" style='width: 75%; display: block; margin: 0 auto;'>
+                            </a>
                         </div>
                         <div class="col-md-6 col-md-pull-6">
                             <h3>Social Digital Platforms</h3>
                             <p>We built Bidstar, a revolutionary auction platform for ambassadors and charities, helping them raise money for the causes that mean the most to them through deep integration of social media.</p>
                             <p>We can help put your platform in front of a global audience too.</p>
+
+                            <div class='btn-box'>
+                                <a href="http://payzip.co.uk/" target="_BLANK" class='btn btn-ghost btn-lg btn-ghost__red'>Bidstar Website</a>
+                            </div>
                         </div>
                     </div>
                 </div>
