--- a/index.html
+++ b/index.html
@@ -28,23 +28,23 @@
                                             <a href="/" class="navbar-brand">
                                                 <span class="image-logo"><img src="img/automise-logo.png" alt="automise" /></span>
                                             </a>
-                                            <button data-target=".navbar-collapse" data-toggle="collapse" class="navbar-toggle" type="button">
-                                                <span class="sr-only">Toggle navigation</span>
-                                                <span class="icon-bar"></span>
-                                                <span class="icon-bar"></span>
-                                                <span class="icon-bar"></span>
-                                            </button>
+                                            <!--<button data-target=".navbar-collapse" data-toggle="collapse" class="navbar-toggle" type="button">-->
+                                                <!--<span class="sr-only">Toggle navigation</span>-->
+                                                <!--<span class="icon-bar"></span>-->
+                                                <!--<span class="icon-bar"></span>-->
+                                                <!--<span class="icon-bar"></span>-->
+                                            <!--</button>-->
                                         </div>
-                                        <div class="navbar-collapse collapse">
-                                            <ul class="navigation nav navbar-right navbar-nav">
-                                                <li class=""><a href="" class="">Link</a></li>
-                                                <li class=""><a href="" class="">Link</a></li>
-                                                <li class=""><a href="" class="">Link</a></li>
-                                                <li class=""><a href="" class="">Link</a></li>
-                                                <li class=""><a href="" class="">Link</a></li>
-                                                <li class=""><a href="" class="">Link</a></li>
-                                            </ul>
-                                        </div>
+                                        <!--<div class="navbar-collapse collapse">-->
+                                            <!--<ul class="navigation nav navbar-right navbar-nav">-->
+                                                <!--<li class=""><a href="" class="">Link</a></li>-->
+                                                <!--<li class=""><a href="" class="">Link</a></li>-->
+                                                <!--<li class=""><a href="" class="">Link</a></li>-->
+                                                <!--<li class=""><a href="" class="">Link</a></li>-->
+                                                <!--<li class=""><a href="" class="">Link</a></li>-->
+                                                <!--<li class=""><a href="" class="">Link</a></li>-->
+                                            <!--</ul>-->
+                                        <!--</div>-->
                                     </div>
                                 </div>
                             </div>
@@ -172,7 +172,7 @@
                             <p>We can also integrate online payment solutions into your systems, such as Stripe, Braintree and PayPal.</p>
 
                             <div class='btn-box'>
-                                <a href="http://payzip.co.uk/" target="_BLANK" class='btn btn-ghost btn-lg btn-ghost__red'>PayZip Website</a>
+                                <a href="http://payzip.co.uk/" target="_BLANK" class='btn btn-ghost btn-lg btn-ghost__grey'>PayZip Website</a>
                             </div>
                         </div>
                     </div>
@@ -198,7 +198,7 @@
                             <p>We can help put your platform in front of a global audience too.</p>
 
                             <div class='btn-box'>
-                                <a href="http://payzip.co.uk/" target="_BLANK" class='btn btn-ghost btn-lg btn-ghost__red'>Bidstar Website</a>
+                                <a href="http://payzip.co.uk/" target="_BLANK" class='btn btn-ghost btn-lg btn-ghost__grey'>Bidstar Website</a>
                             </div>
                         </div>
                     </div>
@@ -209,13 +209,17 @@
                     <div class="wrapper-lg">
                         <div class="row">
                             <div class="col-md-6">
-                                <span class="text-logo">Automise</span>
+                                <span class="image-logo image-logo__footer"><img src="img/automise-logo.png" alt="automise" /></span>
                                 <p class="footer-hero">
-                                    We do some awesome stuff that you'll love that will make us both money
+                                    We would love to chat with you about how we can help.
                                 </p>
                                 <p class="footer-cta">
-                                    What are you waiting for? 
+                                    What are you waiting for? Get in touch - hello@automise.co.uk
                                 </p>
+                                <div class='btn-box'>
+                                    <br />
+                                    <a href="mailto:" class="btn btn-lg btn-ghost btn-ghost__white">Say Hello</a>
+                                </div>
                             </div>
                             <div class="col-md-3 col-md-offset-3">
                                 <div class="contact-item">
