Changes to features

--- a/index.html
+++ b/index.html
@@ -130,26 +130,22 @@
                     </div>
                 </div>
             </section>
+            
             <section class="second-section grey">
                 <div class="container">
                     <div class="row">
-                        <div class="col-xs-12">
-                            <h2>Our areas of expertise</h2>
-                            <p class="large nomargin">We can build almost anything, but here's a few things we're really good at:</p>
-                        </div>
+                        <div class="col-xs-12" />
                     </div>
                 </div>
-                <div class="feature row spacing">
+                <div class="row spacing">
                     <div class="container">
                         <div class="col-md-6 col-md-push-6">
                             <img src="img/slack.png" alt="Slack" style='width: 75%; display: block; margin: 0 auto;'>
                         </div>
                         <div class="col-md-6 col-md-pull-6">
                             <h3>Slack Integration</h3>
-                            <p>Maybe you've already got the tools you need to work with.  Wouldn't it be good if they could all update you in one place?  We can integrate Slack for you so all your humans and systems can talk together.
-
-                            <!-- <br/>Make your business come alive by drawing together the systems you already use and see all of your key information in one place. -->
-                            </p><p>Be notified of every sale, customer support request or tweet about your company instantly, wherever you are!</p>
+                            <p>Maybe you've already got the tools you need to work with.  Wouldn't it be good if they could all update you in one place?  We can integrate Slack for you so all your humans and systems can talk together.</p>
+                            <p>Be notified of every sale, customer support request or tweet about your company instantly, wherever you are!</p>
                         </div>
                     </div>
                 </div>
@@ -164,7 +160,7 @@
                 <div class="row spacing">
                     <div class="container">
                         <div class="col-md-6">
-                            <a href="http://payzip.co.uk" alt="PayZip" target="_BLANK"><img src="img/payzip-image.png" alt="PayZip" style='width: 75%; display: block; margin: 0 auto;'></a>
+                            <a href="http://payzip.co.uk" alt="PayZip" target="_BLANK"><img src="img/payzip-image.png" alt="PayZip" style='width: 100%; display: block; margin: 0 auto;'></a>
                         </div>
                         <div class="col-md-6">
                             <h3>Secure Mobile Payments</h3>
@@ -189,7 +185,7 @@
                     <div class="container">
                         <div class="col-md-6 col-md-push-6">
                             <a href="http://bidstar.co.uk" alt="Bidstar" target="_BLANK">
-                                <img src="img/bidstar-image.png" alt="Bidstar" style='width: 75%; display: block; margin: 0 auto;'>
+                                <img src="img/bidstar-image.png" alt="Bidstar" style='width: 100%; display: block; margin: 0 auto;'>
                             </a>
                         </div>
                         <div class="col-md-6 col-md-pull-6">
