--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                         <div class="row">
                             <!-- Section Header Title -->
                             <div class="col-xs-12">
-                                <h2>Work With Us</h2>
-                                <!-- <p class="large"></p> -->
+                                <h2>How working with us benefits you</h2>
+                                <p class="large"></p>
                             </div>
                         </div>
                         <div class="row">
