--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                         <div class="row">
                             <!-- Section Header Title -->
                             <div class="col-xs-12">
-                                <h2>How working with us benefits you</h2>
-                                <p class="large"></p>
+                                <h2>What we do</h2>
+                                <p class="large nomargin">How working with us benefits you</p>
                             </div>
                         </div>
                         <div class="row">
@@ -134,7 +134,10 @@
             <section class="second-section grey">
                 <div class="container">
                     <div class="row">
-                        <div class="col-xs-12" />
+                        <div class="col-xs-12">
+                            <h2>What we've done</h2>
+                            <p class="large nomargin">We can build almost anything, but here's a few things we're really good at</p>
+                        </div>
                     </div>
                 </div>
                 <div class="row spacing">
@@ -178,7 +181,6 @@
             <section class="second-section grey">
                 <div class="container">
                     <div class="row">
-                        <div class="col-xs-12" />
                     </div>
                 </div>
                 <div class="row spacing">
