changed some stuff

--- a/index.html
+++ b/index.html
@@ -130,14 +130,23 @@
                     </div>
                 </div>
             </section>
-            
-            <section class="second-section grey">
-                <div class="container">
+
+
+            <section class='second-section grey' style="margin-bottom: -100px;">
+                <div class='container'>
                     <div class="row">
                         <div class="col-xs-12">
                             <h2>What we've done</h2>
                             <p class="large nomargin">We can build almost anything, but here's a few things we're really good at</p>
                         </div>
+                    </div>
+                </div>
+            </section>
+            
+            <section class="second-section grey">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-xs-12" />
                     </div>
                 </div>
                 <div class="row spacing">
@@ -149,6 +158,10 @@
                             <h3>Slack Integration</h3>
                             <p>Maybe you've already got the tools you need to work with.  Wouldn't it be good if they could all update you in one place?  We can integrate Slack for you so all your humans and systems can talk together.</p>
                             <p>Be notified of every sale, customer support request or tweet about your company instantly, wherever you are!</p>
+
+                            <div class='btn-box'>
+                                <a href="http://payzip.co.uk/" target="_BLANK" class='btn btn-ghost btn-lg btn-ghost__grey'>Bidstar Website</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -181,6 +194,7 @@
             <section class="second-section grey">
                 <div class="container">
                     <div class="row">
+                        <div class="col-xs-12" />
                     </div>
                 </div>
                 <div class="row spacing">
@@ -202,6 +216,7 @@
                     </div>
                 </div>
             </section>
+
             <footer class="footer" id="footer">
                 <div class="container">
                     <div class="wrapper-lg">
