--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                             <a href="http://payzip.co.uk" alt="PayZip" target="_BLANK"><img src="img/payzip-image.png" alt="PayZip" style='width: 100%; display: block; margin: 0 auto;'></a>
                         </div>
                         <div class="col-md-6">
-                            <h3>Secure Mobile Payments</h3>
+                            <h3>Mobile Payments</h3>
                             <p>We built PayZip to simplify member payments for clubs, societies and not-for-profits.  We're currently helping to revolutionise payments administration for a handful of leading sports organisations.</p>
                             <p>We can also integrate online payment solutions into your systems, such as Stripe, Braintree and PayPal.</p>
 
@@ -201,7 +201,7 @@
                             </a>
                         </div>
                         <div class="col-md-6 col-md-pull-6">
-                            <h3>Social Digital Platforms</h3>
+                            <h3>Web Applications</h3>
                             <p>We built Bidstar, a revolutionary auction platform for ambassadors and charities, helping them raise money for the causes that mean the most to them through deep integration of social media.</p>
                             <p>We can help put your platform in front of a global audience too.</p>
 
