--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                             <p>We can help put your platform in front of a global audience too.</p>
 
                             <div class='btn-box'>
-                                <a href="http://payzip.co.uk/" target="_BLANK" class='btn btn-ghost btn-lg btn-ghost__grey'>Bidstar Website</a>
+                                <a href="http://bidstar.co.uk/" target="_BLANK" class='btn btn-ghost btn-lg btn-ghost__grey'>Bidstar Website</a>
                             </div>
                         </div>
                     </div>
