--- a/index.html
+++ b/index.html
@@ -28,23 +28,7 @@
                                             <a href="/" class="navbar-brand">
                                                 <span class="image-logo"><img src="img/automise-logo.png" alt="automise" /></span>
                                             </a>
-                                            <!--<button data-target=".navbar-collapse" data-toggle="collapse" class="navbar-toggle" type="button">-->
-                                                <!--<span class="sr-only">Toggle navigation</span>-->
-                                                <!--<span class="icon-bar"></span>-->
-                                                <!--<span class="icon-bar"></span>-->
-                                                <!--<span class="icon-bar"></span>-->
-                                            <!--</button>-->
                                         </div>
-                                        <!--<div class="navbar-collapse collapse">-->
-                                            <!--<ul class="navigation nav navbar-right navbar-nav">-->
-                                                <!--<li class=""><a href="" class="">Link</a></li>-->
-                                                <!--<li class=""><a href="" class="">Link</a></li>-->
-                                                <!--<li class=""><a href="" class="">Link</a></li>-->
-                                                <!--<li class=""><a href="" class="">Link</a></li>-->
-                                                <!--<li class=""><a href="" class="">Link</a></li>-->
-                                                <!--<li class=""><a href="" class="">Link</a></li>-->
-                                            <!--</ul>-->
-                                        <!--</div>-->
                                     </div>
                                 </div>
                             </div>
@@ -56,10 +40,10 @@
                                         <h1 class="text-white">Automate workflows, optimise productivity</h1>
                                         <p class="text-white">We build bespoke software systems of all shapes and sizes. <br/>Work with our experts to build just the system you need to grow your business and realise your potential.</p>
                                         <div class="btn-box">
-                                            <a href="#" class="btn btn-lg btn-ghost btn-oval">	
+                                            <a href="#" onclick="scrollToAnchor('whatWeDo')" class="btn btn-lg btn-ghost btn-oval">	
                                                 Learn More
                                             </a>
-                                            <a href="" class="btn btn-lg btn-color btn-oval">	
+                                            <a href="mailto:hello@automise.co.uk" class="btn btn-lg btn-color btn-oval">	
                                                 Say Hello
                                             </a>
                                         </div>
@@ -71,6 +55,7 @@
                 </header>
             </div>
             <section class='first-section'>
+                <a name='whatWeDo'></a>
                 <div class="container">
                     <!-- Padding -->
                     <div class="wrapper-lg">
@@ -227,7 +212,7 @@
                                 </p>
                                 <div class='btn-box'>
                                     <br />
-                                    <a href="mailto:" class="btn btn-lg btn-ghost btn-ghost__white">Say Hello</a>
+                                    <a href="mailto:hello@automise.co.uk" class="btn btn-lg btn-ghost btn-ghost__white">Say Hello</a>
                                 </div>
                             </div>
                             <div class="col-md-3 col-md-offset-3">
