--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <div class='container'>
                     <div class="row">
                         <div class="col-xs-12">
-                            <h2>What we've done</h2>
+                            <h2>What we're doing</h2>
                             <p class="large nomargin">We can build almost anything, but here's a few things we're really good at</p>
                         </div>
                     </div>
@@ -161,9 +161,9 @@
                             <a href="http://payzip.co.uk" alt="PayZip" target="_BLANK"><img src="img/payzip-image.png" alt="PayZip" style='width: 100%; display: block; margin: 0 auto;'></a>
                         </div>
                         <div class="col-md-6">
-                            <h3>Mobile Payments</h3>
+                            <h3>Payment Solutions</h3>
                             <p>We built PayZip to simplify member payments for clubs, societies and not-for-profits.  We're currently helping to revolutionise payments administration for a handful of leading sports organisations.</p>
-                            <p>We can also integrate online payment solutions into your systems, such as Stripe, Braintree and PayPal.</p>
+                            <p>We can also integrate online payment solutions into your systems, such as Stripe, Braintree, PayPal and GoCardless.</p>
 
                             <div class='btn-box'>
                                 <a href="http://payzip.co.uk/" target="_BLANK" class='btn btn-ghost btn-lg btn-ghost__grey'>PayZip Website</a>
@@ -204,7 +204,7 @@
                     <div class="wrapper-lg">
                         <div class="row">
                             <div class="col-md-6">
-                                <span class="image-logo image-logo__footer"><img src="img/automise-logo.png" alt="automise" /></span>
+                                <!--<span class="image-logo image-logo__footer"><img src="img/automise-logo.png" alt="automise" /></span>-->
                                 <p class="footer-hero">
                                     We would love to chat with you about how we can help.
                                 </p>
