Responsive changes and links

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                                     We would love to chat with you about how we can help.
                                 </p>
                                 <p class="footer-cta">
-                                    What are you waiting for? Get in touch - hello@automise.co.uk
+                                What are you waiting for? Get in touch - <a href="mailto:hello@automise.co.uk">hello@automise.co.uk</a>
                                 </p>
                                 <div class='btn-box'>
                                     <br />
