--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/custom.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
@@ -234,6 +235,17 @@
                             <div class="col-md-12">
                                 <p class="footer-copy">© 2016 PayZip Limited. Automise is a trading style of PayZip Limited, 167 Broadway, Cardiff CF24 1QH.</p>
                                 <p class='footer-copy no-margin'>Registered in England &amp; Wales No. 07334100</p>
+                                <p class='pull-right social'>
+                                    <ul>
+                                        <li><a href="http://www.twitter.com/automise" target="_BLANK" title="Automise Twitter"><i class='fa fa-twitter'></i></a></li>
+                                        <li><a href="#t" target="_BLANK" title="Automise Facebook"><i class='fa fa-facebook'></i></a></li>
+                                        <li><a href="#t" target="_BLANK" title="Automise LinkedIn"><i class='fa fa-linkedin'></i></a></li>
+                                        <li><a href="#t" target="_BLANK" title="Automise YouTube"><i class='fa fa-youtube'></i></a></li>
+
+                                        <li><a href="#t" target="_BLANK" title="Automise Google+"><i class='fa fa-google-plus'></i></a></li>
+                                        <li><a href="http://www.github.com/automise" target="_BLANK" title="Automise Github"><i class='fa fa-github'></i></a></li>
+                                    </ul>
+                                </p>
                             </div>
                         </div>
                     </div>
