Bidstar wording changes

--- a/index.html
+++ b/index.html
@@ -190,7 +190,8 @@
                         <div class="col-md-6 col-md-pull-6">
                             <h3>Web Applications</h3>
                             <p>We built Bidstar, a revolutionary auction platform for ambassadors and charities, helping them raise money for the causes that mean the most to them through deep integration of social media.</p>
-                            <p>We can help put your platform in front of a global audience too.</p>
+                            <p>We can help you build a cloud-based web application that runs on all devices, giving you valuable insight into your business.</p>
+                            <!--<p>We can help put your platform in front of a global audience too.</p>-->
 
                             <div class='btn-box'>
                                 <a href="http://bidstar.co.uk/" target="_BLANK" class='btn btn-ghost btn-lg btn-ghost__grey'>Bidstar Website</a>
