Fixed _BLANK in blank links

--- a/index.html
+++ b/index.html
@@ -238,11 +238,11 @@
                                 <p class='footer-copy no-margin'>Registered in England &amp; Wales No. 07334100</p>
                                 <ul>
                                     <li><a href="http://www.twitter.com/automise" target="_BLANK" title="Automise Twitter"><i class='fa fa-twitter'></i></a></li>
-                                    <li><a href="#t" target="_BLANK" title="Automise Facebook"><i class='fa fa-facebook'></i></a></li>
-                                    <li><a href="#t" target="_BLANK" title="Automise LinkedIn"><i class='fa fa-linkedin'></i></a></li>
-                                    <li><a href="#t" target="_BLANK" title="Automise YouTube"><i class='fa fa-youtube'></i></a></li>
+                                    <li><a href="#t" title="Automise Facebook"><i class='fa fa-facebook'></i></a></li>
+                                    <li><a href="#t" title="Automise LinkedIn"><i class='fa fa-linkedin'></i></a></li>
+                                    <li><a href="#t" title="Automise YouTube"><i class='fa fa-youtube'></i></a></li>
 
-                                    <li><a href="#t" target="_BLANK" title="Automise Google+"><i class='fa fa-google-plus'></i></a></li>
+                                    <li><a href="#t" title="Automise Google+"><i class='fa fa-google-plus'></i></a></li>
                                     <li><a href="http://www.github.com/automise" target="_BLANK" title="Automise Github"><i class='fa fa-github'></i></a></li>
                                 </ul>
                             </div>
