--- a/index.html
+++ b/index.html
@@ -201,6 +201,43 @@
                 </div>
             </section>
 
+            <section class='first-section meet-the-team'>
+                <div class="container">
+                    <!-- Padding -->
+                    <div class="wrapper-lg">
+                        <div class="row">
+                            <div class="col-xs-12">
+                                <h2>Who we are</h2>
+                                <p class="large">Meet the team</p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-4 intro-content">
+                                <div class="icon-lg">
+                                    <img src="img/simon-robot.png" width="50%" />
+                                </div>
+                                <h4><a href="http://twitter.com/sihodgkinson" target="_BLANK">Simon Hodgkinson</a></h4>
+                                <p>CEO PayZip &amp; Bidstar. I’m passionate about getting things done and have a slightly obsessive personality.</p>
+                            </div>
+                            <div class="col-sm-4 intro-content">
+                                <div class="icon-lg">
+                                    <img src="img/jay-robot.png" width="50%" />
+                                </div>
+                                <h4><a href="http://twitter.com/jaymiethomas" target="_BLANK">Jaymie Thomas</a></h4>
+                                <p>Having spent his life absorbed in computers and software, Jay uses his powers for good – taking great ideas and working with the team to convert them into brilliant software systems. Away from work, he plays the drums and does a bit of choral singing too.</p>
+                            </div>
+                            <div class="col-sm-4 intro-content">
+                                <div class="icon-lg">
+                                    <img src="img/luke-robot.png" width="50%" />
+                                </div>
+                                <h4><a href="http://twitter.com/lukeberry99" target="_BLANK">Luke Berry</a></h4>
+                                <p>404 Bio not found</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
             <footer class="footer" id="footer">
                 <div class="container">
                     <div class="wrapper-lg">
