--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                                     <img src="img/luke-robot.png" width="50%" />
                                 </div>
                                 <h4><a href="http://twitter.com/lukeberry99" target="_BLANK">Luke Berry</a></h4>
-                                <p>404 Bio not found</p>
+                                <p>Error 404 - Bio not found</p>
                             </div>
                         </div>
                     </div>
