--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                                     <img src="img/simon-robot.png" width="50%" />
                                 </div>
                                 <h4><a href="http://twitter.com/sihodgkinson" target="_BLANK">Simon Hodgkinson</a></h4>
-                                <p>CEO PayZip &amp; Bidstar. I’m passionate about getting things done and have a slightly obsessive personality.</p>
+                                <p>CEO of PayZip &amp; Bidstar. I’m passionate about getting things done and have a slightly obsessive personality.</p>
                             </div>
                             <div class="col-sm-4 intro-content">
                                 <div class="icon-lg">
