Shorter bio for Jay

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                                     <img src="img/jay-robot.png" width="50%" />
                                 </div>
                                 <h4><a href="http://twitter.com/jaymiethomas" target="_BLANK">Jaymie Thomas</a></h4>
-                                <p>Having spent his life absorbed in computers and software, Jay uses his powers for good – taking great ideas and working with the team to convert them into brilliant software systems. Away from work, he plays the drums and does a bit of choral singing too.</p>
+                                <p>Having spent his life absorbed in computers and software, Jay takes great ideas and works with the team to convert them into brilliant software systems.</p>
                             </div>
                             <div class="col-sm-4 intro-content">
                                 <div class="icon-lg">
