--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 <div class="row spacing">
                     <div class="container">
                         <div class="col-md-6">
-                            <a href="http://payzip.co.uk" alt="PayZip" target="_BLANK"><img src="build/img/payzip-image.png" alt="PayZip" style='width: 100%; display: block; margin: 0 auto;'></a>
+                            <a href="http://www.payzip.co.uk" alt="PayZip" target="_BLANK"><img src="build/img/payzip-image.png" alt="PayZip" style='width: 100%; display: block; margin: 0 auto;'></a>
                         </div>
                         <div class="col-md-6">
                             <h3>Payment Solutions</h3>
