Fixed *both* PayZip brochure site links

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                             <p>We can also integrate online payment solutions into your systems, such as Stripe, Braintree, PayPal and GoCardless.</p>
 
                             <div class='btn-box'>
-                                <a href="http://payzip.co.uk/" target="_BLANK" class='btn btn-ghost btn-lg btn-ghost__grey'>PayZip Website</a>
+                                <a href="http://www.payzip.co.uk/" target="_BLANK" class='btn btn-ghost btn-lg btn-ghost__grey'>PayZip Website</a>
                             </div>
                         </div>
                     </div>
