--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
                                         <h1 class="text-white">Automate workflows, optimise productivity</h1>
                                         <p class="text-white">We build bespoke software systems of all shapes and sizes. <br/>Work with our experts to build just the system you need to grow your business and realise your potential.</p>
                                         <div class="btn-box">
-                                            <a href="#" onclick="scrollToAnchor('whatWeDo')" class="btn btn-lg btn-ghost btn-oval">	
+                                            <a href="#" onclick="scrollToAnchor('whatWeDo')" class="btn btn-lg btn-ghost btn-oval">
                                                 Learn More
                                             </a>
-                                            <a href="mailto:hello@automise.co.uk" class="btn btn-lg btn-color btn-oval">	
+                                            <a href="mailto:hello@automise.co.uk" class="btn btn-lg btn-color btn-oval">
                                                 Say Hello
                                             </a>
                                         </div>
@@ -126,7 +126,7 @@
                     </div>
                 </div>
             </section>
-            
+
             <section class="second-section grey">
                 <div class="container">
                     <div class="row">
@@ -210,22 +210,22 @@
                         </div>
                         <div class="row">
                             <div class="col-sm-4 intro-content">
-                                <div class="icon-lg">
-                                    <img src="build/img/simon-robot.png" width="50%" />
+                                <div>
+                                    <img id="simon" class="team-simon" src="build/img/simon-robot.png" onmouseover="face(this.id);" onmouseout="robot(this.id);" width="50%" />
                                 </div>
                                 <h4><a href="http://twitter.com/sihodgkinson" target="_BLANK">Simon Hodgkinson</a></h4>
                                 <p>CEO of PayZip &amp; Bidstar. I’m passionate about getting things done and have a slightly obsessive personality.</p>
                             </div>
                             <div class="col-sm-4 intro-content">
-                                <div class="icon-lg">
-                                    <img src="build/img/jay-robot.png" width="50%" />
+                                <div>
+                                    <img id="jay" class="team-jay" src="build/img/jay-robot.png" onmouseover="face(this.id);" onmouseout="robot(this.id);" width="50%" />
                                 </div>
                                 <h4><a href="http://twitter.com/jaymiethomas" target="_BLANK">Jaymie Thomas</a></h4>
                                 <p>Having spent his life absorbed in computers and software, Jay takes great ideas and works with the team to convert them into brilliant software systems.</p>
                             </div>
                             <div class="col-sm-4 intro-content">
                                 <div class="icon-lg">
-                                    <img src="build/img/luke-robot.png" width="50%" />
+                                    <img id="luke" class="team-luke" src="build/img/luke-robot.png" onmouseover="face(this.id);" onmouseout="robot(this.id);" width="50%" />
                                 </div>
                                 <h4><a href="http://twitter.com/lukeberry99" target="_BLANK">Luke Berry</a></h4>
                                 <p>Error 404 - Bio not found</p>
