Change image from jpg to png with round crop

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                             </div>
                             <div class="col-sm-6 col-md-3 intro-content">
                                 <div class="icon-lg">
-                                    <img src="build/img/dan-robot.jpg" width="50%" style="border-radius: 50%" />
+                                    <img src="build/img/dan-robot.png" width="50%" />
                                 </div>
                                 <h4>Daniel Neenan</h4>
                                 <p>The newest member of the Automise team and the best thing to happen to this company since sliced bread.</p>
