Default faces and added the Dan section

--- a/index.html
+++ b/index.html
@@ -209,10 +209,10 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-sm-4 intro-content">
+                            <div class="col-sm-6 col-md-3 intro-content">
                                 <div class="image">
                                     <div id="simon-bg">
-                                        <img src="build/img/simon-robot.png" width="50%" style="visibility: hidden" />
+                                        <img src="build/img/simon-face.png" width="50%" style="visibility: hidden" />
                                     </div>
                                 </div>
                                 <div class="text">
@@ -220,10 +220,10 @@
                                     <p>CEO of PayZip &amp; Bidstar. I’m passionate about getting things done and have a slightly obsessive personality.</p>
                                 </div>
                             </div>
-                            <div class="col-sm-4 intro-content">
+                            <div class="col-sm-6 col-md-3 intro-content">
                                 <div class="image">
                                     <div id="jay-bg">
-                                        <img src="build/img/jay-robot.png" width="50%" style="visibility: hidden" />
+                                        <img src="build/img/jay-face.png" width="50%" style="visibility: hidden" />
                                     </div>
                                 </div>
                                 <div class="text">
@@ -231,15 +231,26 @@
                                     <p>Having spent his life absorbed in computers and software, Jay takes great ideas and works with the team to convert them into brilliant software systems.</p>
                                 </div>
                             </div>
-                            <div class="col-sm-4 intro-content">
+                            <div class="col-sm-6 col-md-3 intro-content">
                                 <div class="image">
                                     <div id="luke-bg">
-                                        <img src="build/img/luke-robot.png" width="50%" style="visibility: hidden" />
+                                        <img src="build/img/luke-face.png" width="50%" style="visibility: hidden" />
                                     </div>
                                 </div>
-                                    <div class="text">
+                                <div class="text">
                                     <h4><a href="http://twitter.com/lukeberry99" target="_BLANK">Luke Berry</a></h4>
                                     <p>Error 404 - Bio not found</p>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 col-md-3 intro-content">
+                                <div class="image">
+                                    <div id="dan-bg">
+                                        <img src="build/img/dan-face.png" width="50%" style="visibility: hidden;" />
+                                    </div>
+                                </div>
+                                <div class="text">
+                                    <h4>Daniel Neenan</h4>
+                                    <p>The newest member of the Automise team and the best thing to happen to this company since sliced bread.</p>
                                 </div>
                             </div>
                         </div>
