Rewording the Daniel Bio

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                                     <img src="build/img/dan-robot.png" width="50%" />
                                 </div>
                                 <h4>Daniel Neenan</h4>
-                                <p>The newest member of the Automise team and the best thing to happen to this company since sliced bread.</p>
+                                <p>The newest member of the Automise team and the best thing to happen to the company since sliced bread.</p>
                             </div>
                         </div>
                     </div>
