--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
                                         <h1 class="text-white">Automate workflows, optimise productivity</h1>
                                         <p class="text-white">We build bespoke software systems of all shapes and sizes. <br/>Work with our experts to build just the system you need to grow your business and realise your potential.</p>
                                         <div class="btn-box">
-                                            <a href="#" onclick="scrollToAnchor('whatWeDo')" class="btn btn-lg btn-ghost btn-oval">	
+                                            <a href="#" onclick="scrollToAnchor('whatWeDo')" class="btn btn-lg btn-ghost btn-oval">
                                                 Learn More
                                             </a>
-                                            <a href="mailto:hello@automise.co.uk" class="btn btn-lg btn-color btn-oval">	
+                                            <a href="mailto:hello@automise.co.uk" class="btn btn-lg btn-color btn-oval">
                                                 Say Hello
                                             </a>
                                         </div>
@@ -126,7 +126,7 @@
                     </div>
                 </div>
             </section>
-            
+
             <section class="second-section grey">
                 <div class="container">
                     <div class="row">
@@ -209,26 +209,49 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-sm-4 intro-content">
-                                <div class="icon-lg">
-                                    <img src="build/img/simon-robot.png" width="50%" />
+                            <div class="col-sm-6 col-md-3 intro-content">
+                                <div class="image">
+                                    <div id="simon-bg">
+                                        <img src="build/img/simon-face.png" width="50%" style="visibility: hidden" />
+                                    </div>
                                 </div>
-                                <h4><a href="http://twitter.com/sihodgkinson" target="_BLANK">Simon Hodgkinson</a></h4>
-                                <p>CEO of PayZip &amp; Bidstar. I’m passionate about getting things done and have a slightly obsessive personality.</p>
+                                <div class="text">
+                                    <h4><a href="http://twitter.com/sihodgkinson" target="_BLANK">Simon Hodgkinson</a></h4>
+                                    <p>CEO of PayZip &amp; Bidstar. I’m passionate about getting things done and have a slightly obsessive personality.</p>
+                                </div>
                             </div>
-                            <div class="col-sm-4 intro-content">
-                                <div class="icon-lg">
-                                    <img src="build/img/jay-robot.png" width="50%" />
+                            <div class="col-sm-6 col-md-3 intro-content">
+                                <div class="image">
+                                    <div id="jay-bg">
+                                        <img src="build/img/jay-face.png" width="50%" style="visibility: hidden" />
+                                    </div>
                                 </div>
-                                <h4><a href="http://twitter.com/jaymiethomas" target="_BLANK">Jaymie Thomas</a></h4>
-                                <p>Having spent his life absorbed in computers and software, Jay takes great ideas and works with the team to convert them into brilliant software systems.</p>
+                                <div class="text">
+                                    <h4><a href="http://twitter.com/jaymiethomas" target="_BLANK">Jaymie Thomas</a></h4>
+                                    <p>Having spent his life absorbed in computers and software, Jay takes great ideas and works with the team to convert them into brilliant software systems.</p>
+                                </div>
                             </div>
-                            <div class="col-sm-4 intro-content">
-                                <div class="icon-lg">
-                                    <img src="build/img/luke-robot.png" width="50%" />
+                            <div class="col-sm-6 col-md-3 intro-content">
+                                <div class="image">
+                                    <div id="luke-bg">
+                                        <img src="build/img/luke-face.png" width="50%" style="visibility: hidden" />
+                                    </div>
                                 </div>
-                                <h4><a href="http://twitter.com/lukeberry99" target="_BLANK">Luke Berry</a></h4>
-                                <p>Error 404 - Bio not found</p>
+                                <div class="text">
+                                    <h4><a href="http://twitter.com/lukeberry99" target="_BLANK">Luke Berry</a></h4>
+                                    <p>Error 404 - Bio not found</p>
+                                </div>
+                            </div>
+                            <div class="col-sm-6 col-md-3 intro-content">
+                                <div class="image">
+                                    <div id="dan-bg">
+                                        <img src="build/img/dan-face.png" width="50%" style="visibility: hidden;" />
+                                    </div>
+                                </div>
+                                <div class="text">
+                                    <h4>Daniel Neenan</h4>
+                                    <p>The newest member of the Automise team and the best thing to happen to this company since sliced bread.</p>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -276,7 +299,6 @@
                     </div>
                 </div>
             </div>
-        </div>
         </div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
